style.css
/* 

# Front-end Style Guide

## Layout

The designs were created to the following widths:

- Mobile: 375px
- Desktop: 1440px

## Colors

### Primary

- Pink: hsl(322, 100%, 66%)
- Light Pink: hsl(321, 100%, 78%)
- Light Red: hsl(0, 100%, 63%)

### Neutral

- Very Dark Cyan: hsl(192, 100%, 9%)
- Very Pale Blue: hsl(207, 100%, 98%)

## Typography

### Headings

- Family: [Poppins](https://fonts.google.com/specimen/Poppins)
- Weights: 700

### Body

- Family: [Open Sans](https://fonts.google.com/specimen/Open+Sans)
- Weights: 400, 600, 700

## Icons

For the social icons, you can use a font icon library. Some suggestions can be found below:

- [Font Awesome](https://fontawesome.com/)
- [IcoMoon](https://icomoon.io/)
- [Ionicons](https://ionicons.com/)

*/

* {
  box-sizing: border-box;
}

html {
  font-size: 14px;
}

html,
body,
h1,
h2,
h3,
h4,
h5,
h6,
p,
a {
  margin: 0;
  padding: 0;
}

body {
  font-family: "Open Sans", sans-serif;
  background-color: chartreuse;
}

.main-heading {
  font-family: "Poppins", sans-serif;
}

/*********************************************** Header CSS Starts ***********************************************/

/* Header */
header {
  width: 100%;
  padding: 2.01rem 2rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

/* Huddle logo div */
.huddle-logo {
  padding-top: 2.5px;
}

/* Huddle logo image */
.huddle-logo img {
  width: 5.5rem;
}

/* Try it Button in the header at right side */
.try-it-btn {
  background-color: #ffffff;
  border: 1px solid hsl(321, 100%, 78%);
  color: hsl(321, 100%, 78%);
  border-radius: 1.5rem;
  padding: 0.2rem 1rem;
  font-family: "Open Sans", sans-serif;
  font-size: 0.6rem;
}

/*********************************************** Header CSS Finish ***********************************************/

/*********************************************** Community fans sectoin CSS start ***********************************************/

.community-fans {
  text-align: center;
  padding: 3rem 2rem;
}

.main-heading {
  font-size: 2rem;
  text-transform: capitalize;
}

.main-text {
  font-size: 0.8rem;
  margin-top: 2rem;
  color: hsl(192, 100%, 9%);
  font-weight: 600;
  line-height: 1.5rem;
}

.get-start-btn {
  background-color: hsl(322, 100%, 66%);
  color: #ffffff;
  font-size: 0.9rem;
  font-weight: 600;
  border: none;
  border-radius: 2rem;
  padding: 1rem 3rem;
  text-transform: capitalize;
  margin-top: 3rem;
  margin-bottom: 4.5rem;
}

.screen-mockup img {
  width: 100%;
}

/*********************************************** Community fans sectoin CSS Finish ***********************************************/

/*********************************************** Digital Data sectoin CSS Start ***********************************************/

.digital-data {
  padding: 3rem 2rem;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  text-align: center;
  margin-bottom: 4rem;
}

.message-data {
  margin-top: 4rem;
}

.digital-data img {
  width: 2rem;
  float: left;
}

.digital-data h2 {
  font-family: "Poppins", sans-serif;
  font-size: 3.5rem;
  text-align: left;
}

.digital-data p {
  color: hsl(214, 3%, 53%);
  text-transform: capitalize;
}

/*********************************************** Digital Data sectoin CSS Finih ***********************************************/

/*********************************************** Banner section CSS Start ***********************************************/

.banner .main-heading,
.banner .main-text {
  padding: 0 2rem;
  text-align: center;
}

.banner .main-heading {
  margin-top: 3rem;
}

.banner .main-text {
  margin-top: 1rem;
}

.banner .illustration-img {
  text-align: center;
}

.banner .illustration-img img {
  width: 80%;
}

.grow-together .top-curve,
.grow-together .bottom-curve,
.your-users .top-curve,
.your-users .bottom-curve {
  background-size: contain;
  background-repeat: no-repeat;
  height: 500px;
  width: 100%;
  position: absolute;
  left: 0;
  right: 0;
}

.grow-together .top-curve {
  top: calc((-29 / 100) * 100vw);
  background-image: url(./images/bg-section-top-mobile-1.svg);
}

.grow-together .bottom-curve {
  bottom: -500px;
  background-image: url(./images/bg-section-bottom-mobile-1.svg);
}

.your-users .top-curve {
  top: calc((-26.5 / 100) * 100vw);
  background-image: url(./images/bg-section-top-mobile-2.svg);
}

.your-users .bottom-curve {
  bottom: -500px;
  background-image: url(./images/bg-section-bottom-mobile-2.svg);
}

/* .top-curve,
.bottom-curve {
  position: absolute;
  width: 100%;
}

.top-curve {
  top: -95px;
  left: 0;
}

.bottom-curve {
  bottom: -95px;
  left: 0;
} */

/* .bottom-curve .desk,
.top-curve .desk,
.bottom-curve .mob,
.top-curve .mob {
  width: 100%;
  height: 105px;
  display: inline;
} */

.grow-together {
  /* background-color: hsl(207, 100%, 98%); */
  background-color: brown;
  position: relative;
  padding: 3rem 0;
}

.flowing-conversations {
  padding-top: 12rem;
  position: relative;
}

.your-users {
  position: relative;
  /* background-color: hsl(207, 100%, 98%); */
  background-color: brown;
  padding: 3rem 0;
  margin: 15rem 0;
}

/* .bottom-curve .desk,
.top-curve .desk {
  display: none;
} */

/*********************************************** Banner section CSS Finish ***********************************************/

/*********************************************** Build Community section CSS Start ***********************************************/

.build-community {
  text-align: center;
  padding: 0 2rem;
}

/*********************************************** Build Community section CSS Finish ***********************************************/

/*********************************************** Footer CSS Start ***********************************************/

.container {
  width: 100%;
  overflow: hidden;
}
/* ... */

